--- a/HousePricePrediction.ipynb
+++ b/HousePricePrediction.ipynb
@@ -7967,16 +7967,17 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Street\n",
-    "Utilities\n",
-    "Condition2\n",
-    "RoofMatl\n",
-    "Heating\n",
-    "PoolQC\n",
-    "MiscFeature\n"
+    "#### low variance features\n",
+    "- Street\n",
+    "- Utilities\n",
+    "- Condition2\n",
+    "- RoofMatl\n",
+    "- Heating\n",
+    "- PoolQC\n",
+    "- MiscFeature\n"
    ]
   },
   {
@@ -8021,13 +8022,6 @@
    "source": [
     "data.columns"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
