--- a/HousePricePrediction.ipynb
+++ b/HousePricePrediction.ipynb
@@ -1,15 +1,50 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All the life cycle in datascience \n",
-    "#data analysis\n",
-    "#feature engineering\n",
-    "#feature selection\n",
-    "#model building\n",
-    "#model deployment"
+    "# Predicting House Prices with Machine Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "- This notebook is going to be focused on solving the problem of predicting house prices for house buyers and house sellers.\n",
+    "\n",
+    "- A house value is simply more than location and square footage. Like the features that make up a person, an educated party would want to know all aspects that give a house its value.\n",
+    "\n",
+    "- We are going to take advantage of all of the feature variables available to use and use it to analyze and predict house prices.\n",
+    "\n",
+    "- We are going to break everything into logical steps that allow us to ensure the cleanest, most realistic data for our model to make accurate predictions from.\n",
+    "\n",
+    "1. Load Data and Packages\n",
+    "2. Analyzing the Test Variable (Sale Price)\n",
+    "3. Multivariable Analysis\n",
+    "4. Impute Missing Data and Clean Data\n",
+    "5. Feature Transformation/Engineering\n",
+    "6. Modeling and Predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##   0. Understanding the Client and their Problem\n",
+    "A benefit to this study is that we can have two clients at the same time! (Think of being a divorce lawyer for both interested parties) However, in this case, we can have both clients with no conflict of interest!\n",
+    "\n",
+    "Client Housebuyer: This client wants to find their next dream home with a reasonable price tag. They have their locations of interest ready. Now, they want to know if the house price matches the house value. With this study, they can understand which features (ex. Number of bathrooms, location, etc.) influence the final price of the house. If all matches, they can ensure that they are getting a fair price.\n",
+    "\n",
+    "Client Houseseller: Think of the average house-flipper. This client wants to take advantage of the features that influence a house price the most. They typically want to buy a house at a low price and invest on the features that will give the highest return. For example, buying a house at a good location but small square footage. The client will invest on making rooms at a small cost to get a large return."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Load Data and Packages"
    ]
   },
   {
@@ -829,6 +864,14 @@
    ],
    "source": [
     "df[categorical_features].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Analyzing the Test Variable (Sale Price)\n",
+    "## 3. Multivariable Analysis"
    ]
   },
   {
@@ -4937,7 +4980,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# correlation of each variable with salesPrice"
+    "### correlation of each variable with salesPrice"
    ]
   },
   {
@@ -6100,17 +6143,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature Engineering"
+    "## 4. Impute Missing Data and Clean Data"
    ]
   },
   {
@@ -6542,7 +6578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## handle Categorical missing valued Feature\n"
+    "### handle Categorical missing valued Feature\n"
    ]
   },
   {
@@ -6821,7 +6857,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Handle Numerical missing valued Feature"
+    "###  Handle Numerical missing valued Feature"
    ]
   },
   {
@@ -6881,7 +6917,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imputation for Numerical missing values using k-Nearest Neighbors Imputer.\n",
+    "###  Imputation for Numerical missing values using k-Nearest Neighbors Imputer.\n",
     "- Each sample’s missing values are imputed using the mean value from n_neighbors nearest neighbors found in the training set. Two samples are close if the features that neither is missing are close.\n"
    ]
   },
@@ -7139,7 +7175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## temporal variables(Date time variable)"
+    "### temporal variables(Date time variable)"
    ]
   },
   {
@@ -7470,7 +7506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## After making some plots we found that we have some colums with low variance so we decide to delete them"
+    "### After making some plots we found that we have some colums with low variance so we decide to delete them"
    ]
   },
   {
@@ -8040,7 +8076,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Handling  Outlier"
+    "###  Handling  Outlier"
    ]
   },
   {
@@ -52521,17 +52557,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Feature Scalling"
+    "## 5. Feature Transformation\n"
    ]
   },
   {
@@ -53571,11 +53600,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature Selection\n",
-    "\n"
+    "###  Final worksheet for feature selection and modelling"
    ]
   },
   {
